--- a/src/app/photos/photo-list/photo-list.component.html
+++ b/src/app/photos/photo-list/photo-list.component.html
@@ -1,5 +1,6 @@
 <div class="text-center mt-3 mb-3">
     <form class="">
+        <i aria-hidden="true" class="fa fa-search mr-2"></i>
         <input
             class="rounded"
             type="search"
