--- a/src/app/photos/photo-list/photo-list.component.html
+++ b/src/app/photos/photo-list/photo-list.component.html
@@ -1,17 +1,11 @@
-<div class="text-center mt-3 mb-3">
-    <form class="">
-        <i aria-hidden="true" class="fa fa-search mr-2"></i>
-        <input
-            class="rounded"
-            type="search"
-            placeholder="search..."
-            autofocus
-            (keyup)="debounce.next($event.target.value)"
-            >
-    </form>
-</div>
+<ap-search 
+    (onTyping)="filter = $event"
+    [value]="filter">
+</ap-search>
 
-<ap-photos [photos]="photos | filterByDescription: filter"></ap-photos>
+<ap-photos 
+    [photos]="photos | filterByDescription: filter">
+</ap-photos>
 
 <ap-load-button 
     (click)="load()"
