--- a/src/app/shared/components/card/card.component.html
+++ b/src/app/shared/components/card/card.component.html
@@ -1,5 +1,5 @@
 <div class="card border-light text-center">
-    <h4 class="card-header">{{title}}</h4>
+    <h4 class="card-header" *ngIf="title">{{title}}</h4>
     <div class="card-block text-justify">
         <!-- aqui entra o conteúdo -->
         <ng-content></ng-content>
