--- a/src/app/home/signin/signin.component.html
+++ b/src/app/home/signin/signin.component.html
@@ -1,22 +1,31 @@
 <h4 class="text-center">Login</h4>
 
-<form class="form mt-4">
+<form [formGroup]="loginForm" class="form mt-4">
 
     <div class="form-group">
-        <input 
+        <input formControlName="userName"
             class="form-control" 
             placeholder="user name" 
-            autofocus>  
+            autofocus>
+        <ap-vmessage 
+            *ngIf="loginForm.get('userName').errors?.required"
+            text=" User nama is required!">
+        </ap-vmessage>
     </div>
 
     <div class="form-group">
-        <input
+        <input formControlName="password"
             type="password" 
             class="form-control" 
             placeholder="password">              
+        <ap-vmessage 
+            *ngIf="loginForm.get('password').errors?.required"
+            text="Password is required!">
+            
+        </ap-vmessage>
     </div>
 
-    <button 
+    <button [disabled]="loginForm.invalid"
         type="submit" 
         class="btn btn-primary btn-block">
         login
