--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -3,7 +3,10 @@
         <a class="navbar-brand">ALURAPIC</a>
         <div *ngIf="(user$) | async as user; else login">
             <i class="fa fa-user-circle"></i>
-            <a class="ml-2">{{ user.name }}</a>
+            <a class="ml-1 mr-2">{{ user.name }}</a>
+
+            <i class="fa fa-sign-out"></i>
+            <a (click)="logout()">Logout</a>
         </div>
 
         <ng-template #login>
