p3-aula02-03-preview de imagens

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
-<ap-header></ap-header>
-<br>
-<router-outlet></router-outlet>
-<ap-footer></ap-footer>
+<div class="">
+    <ap-header></ap-header>
+    <br>
+    <router-outlet></router-outlet>
+    <ap-footer></ap-footer>
+</div>
