--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -1,5 +1,7 @@
+
 <header class="fixed-top">
     <nav class="navbar navbar-light bg-white">
+        <div class="container">
         <a class="navbar-brand">ALURAPIC</a>
         <div *ngIf="(user$) | async as user; else login">
             <i class="fa fa-user-circle"></i>
@@ -14,5 +16,6 @@
                 <a [routerLink]="['']">Please, login!</a>
             </span>
         </ng-template>
+    </div>
     </nav>
 </header>
