--- a/src/app/photos/photo-form/photo-form.component.html
+++ b/src/app/photos/photo-form/photo-form.component.html
@@ -1,22 +1,33 @@
 <div class="container">
-    <!--p>
+    <p>
         Form Status: {{ photoForm.status }}
-    </p-->
+    </p>
     <form [formGroup]="photoForm" class="row" (submit)="upload()">
-      <div class="col-md-6 text-center">
-        <input 
-          formControlName="file" 
-          type="file" 
-          accept="image/*" 
-          (change)="file = $event.target.files[0]"
-          >
-        <ap-vmessage 
-          text="Please, select a photo" 
-          *ngIf="photoForm.get('file').errors?.required">
-        </ap-vmessage>
+      <div class="col-md-4 text-center">
+        <div class="form-group" *ngIf="!preview; else previewImage">
+          <button type="button" (click)="fileInput.click()" class="btn btn-primary">
+              <i class="fa fa-image fa-4x align-middle"></i>
+          </button>
+          <input #fileInput
+            hidden
+            formControlName="file" 
+            type="file" 
+            accept="image/*" 
+            (change)="handleFile($event.target.files[0])"
+            >
+          <ap-vmessage 
+            text="Please, select a photo" 
+            *ngIf="photoForm.get('file').errors?.required">
+          </ap-vmessage>
+        </div>
+        <ng-template #previewImage>
+          <div class="">
+            <ap-photo [url]="preview" title="Preview"></ap-photo>
+          </div>
+        </ng-template>
       </div>
   
-      <div class="col-md-6">
+      <div class="col-md-8">
         <div class="form-group">
           <textarea 
             formControlName="description"
