--- a/src/app/photos/photo-list/photo-list.component.html
+++ b/src/app/photos/photo-list/photo-list.component.html
@@ -1,13 +1,15 @@
-<ap-search 
-    (onTyping)="filter = $event"
-    [value]="filter">
-</ap-search>
-
-<ap-photos 
-    [photos]="photos | filterByDescription: filter">
-</ap-photos>
-
-<ap-load-button 
-    (click)="load()"
-    [hasMore]="hasMore">
-</ap-load-button>
+<div class="container">
+    <ap-search 
+        (onTyping)="filter = $event"
+        [value]="filter">
+    </ap-search>
+    
+    <ap-photos 
+        [photos]="photos | filterByDescription: filter">
+    </ap-photos>
+    
+    <ap-load-button 
+        (click)="load()"
+        [hasMore]="hasMore">
+    </ap-load-button>
+</div>
